--- a/HTML/CSS.html
+++ b/HTML/CSS.html
@@ -37,6 +37,7 @@
         p{
             background-color: cornflowerblue
         }
+        /*por clase*/
         .nombreClaseRojo{
             background-color: red;
         }
@@ -46,7 +47,10 @@
         .nombreClaseAmarillo{
             background-color: yellow;
         }
-        
+        /*por id*/
+        #parrafoVerde{
+            background-color: darkgreen;
+        }
     </style>
 </head>
 <body>
@@ -55,7 +59,7 @@
     <h1>Amigos</h1>
     <p class="nombreClaseAzul">Parrafo Azul</p>
     <h1>Politécnicos</h1>
-    <p class="nombreClaseAmarillo">Parrafo Amarillo</p>
+    <p id="parrafoVerde" class="nombreClaseAmarillo">Parrafo Amarillo</p>
     
     <p>Parrafo sin clase</p>
 </body>
