--- a/HTML/CSS.html
+++ b/HTML/CSS.html
@@ -1,57 +1,9 @@
-<!--ejemplo de xml-->
-<!--
-<etiqueta></etiqueta>
-<tag>Valor del tag</tag>
-<universidad nombre="Escuela Politécnica Nacional" estudiantes="2500"> 
-    <facultad>
-        <nombre>Sistemas</nombre>
-    </facultad>
-    <facultad>
-        <nombre>Electrica</nombre>
-    </facultad>
-    <facultad>
-        <nombre>Mecanica</nombre>
-    </facultad>
-</universidad>-->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Aprendiendo CSS</title>
-    <style>
-        /*nombreTag {
-            propiedad1:valorPropiedad1
-            propiedad2:valorPropiedad2
-        }*/
-        html{
-            background-color: antiquewhite ;
-        }
-        body{
-            background-color: cadetblue ;
-        }
-        h1{
-            background-color: dodgerblue ;
-        }
-        p{
-            background-color: cornflowerblue
-        }
-        /*por clase*/
-        .nombreClaseRojo{
-            background-color: red;
-        }
-        .nombreClaseAzul{
-            background-color: blue;
-        }
-        .nombreClaseAmarillo{
-            background-color: yellow;
-        }
-        /*por id*/
-        #parrafoVerde{
-            background-color: darkgreen;
-        }
-    </style>
+    <link rel="stylesheet" href="../HTML/Estilos.css">
 </head>
 <body>
     <h1>Hola</h1>
