--- a/HTML/CSS.html
+++ b/HTML/CSS.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Aprendiendo CSS</title>
     <link rel="stylesheet" href="../HTML/Estilos.css">
+    <link rel="stylesheet" href="../HTML/Estilos1.css">
 </head>
 <body>
     <h1>Hola</h1>
