--- a/HTML/CSS.html
+++ b/HTML/CSS.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Aprendiendo CSS</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!--
     <link rel="stylesheet" href="../HTML/Estilos.css">
     <link rel="stylesheet" href="../HTML/Estilos1.css">
+-->
 </head>
 <body>
     <h1>Hola</h1>
