--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -27,12 +27,27 @@
   <p>El tag par describir imagenes es:<code>&lt;img&gt;</code></p>
   
   <h2>Usar inputs con Bootstrap</h2>
-  no esta permitido por ejemplo el <kbd><kbd>ctrl</kbd><kbd>+</kbd><kbd>c</kbd></kbd>
+  <p>no esta permitido por ejemplo el <kbd><kbd>ctrl</kbd><kbd>+</kbd><kbd>c</kbd></kbd></p>
   
+  <h2>Forms</h2>
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-6">
+              <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button>
+          </div>
+          <div class="col-sm-3"></div>
+      </div>
+  </div>
   
+    
   <h2>Tablas</h2>
   <table class="table table-striped">
-      <tr><!--       Table row-->
+      <tr class="danger"><!--       Table row-->
           <th>Company</th><!--       Table header-->
           <th>Contact</th>
           <th>Country</th>
@@ -48,6 +63,9 @@
           <td>Mexico</td>
       </tr>
   </table>
+  
+  
+  
    <h1>Hola</h1>
          <div class="container" style="background-color:yellow;">
              <div class="row" style="background-color:green;">
