Cambio de boton

--- a/Bootstrap/Bootstrap.html
+++ b/Bootstrap/Bootstrap.html
@@ -35,8 +35,9 @@
           <div class="col-sm-3"></div>
           <div class="col-sm-6">
               <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                  <label for="exampleInputEmail1">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                  <div class="input-group-addon">aq</div>
               </div>
               <button type="submit" class="btn btn-default">Submit</button>
           </div>
