--- a/ProyectoAngular/src/index.html
+++ b/ProyectoAngular/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--Botstrap css-->
   <link rel="stylesheet" href="assets/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+  <!--Animate css-->
+  <link rel="stylesheet" href="assets/bootstrap-3.3.7-dist/css/animate.css">
   <!--JQuery-->
   <script src="assets/jquery-3.1.1.js"></script>
   <!--Botstrap js-->
